<resources>
    <string name="app_name">G69A_DN</string>
    <string name="register_start_snap">Start Snap</string>
    <string name="register_name">Name:</string>
    <string name="register_age">Age:</string>
    <string name="register_number">NO:</string>
    <string name="register_id">ID:</string>
    <string name="register_type">Type:</string>
    <string name="register_sex">Sex:</string>
    <string name="register_add_template">Add Template</string>
    <string name="register_back">Back</string>
    <string name="register_face_snap">Register Snap Face</string>
    <string name="register_device_setting">Setting</string>

    <string-array name="user_type">
        <item>Unknown</item>
        <item>Blacklist</item>
        <item>Whitelist</item>
        <item>Customer</item>
        <item>Owner</item>
        <item>Visitor</item>
    </string-array>

    <string-array name="user_sex">
        <item>Unknown</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="user_time">
        <item>90 Day</item>
        <item>60 Day</item>
        <item>30 Day</item>
    </string-array>

    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="filter_cardNo">0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <style name="AlertDialogStyle" parent="@android:style/Theme.Dialog">
        <item name="android:windowBackground">@android:color/transparent</item>
        <item name="android:windowContentOverlay">@null</item>
        <item name="android:windowIsFloating">true</item>
        <item name="android:windowFrame">@null</item>
        <item name="android:backgroundDimEnabled">true</item>
        <item name="android:windowNoTitle">true</item>
        <item name="android:windowIsTranslucent">true</item>
    </style>
</resources>
